--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,12 @@ add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
 aux_source_directory(src/ls SRC)
 aux_source_directory(sample SRC_SAMPLE)
 
-include_directories(src)
+include_directories(include)
 
 add_library(lsbase64 SHARED ${SRC})
 add_executable(testcase ${SRC_SAMPLE} ${SRC})
+
+install(TARGETS lsbase64 DESTINATION lib)
+
+install(DIRECTORY include/ls DESTINATION include/ls)
+
